2413 [OneClick] fixed option to set a language by default if it cannot be determined (regression of 2363)
2412 [Update] enabled megui.xvidvideo.ru again
2411 [x264] fixed wrong number format of the zone modifier in same cases
2410 [Settings] sort the default languages alphabetically
2409 [Update] fixed grammar/spelling errors
2408 [AviSynth] fixed DirectShowSource in non-portable mode (regression of 2406)
2407 [Update] disabled megui.xvidvideo.ru mirror as it is out of sync
2406 [AviSynth] only load portable DirectShowSource.dll if portable mode is used
2405 [Log] improved avs log information
2404 [MediaInfo] ignore phantom audio tracks
2403 [M2TS Muxer] added A_LPCM as Audio Codec ID for WAV/PCM files. Bug #730
2402 [Queue] extended "Open" option to open input/output files/folders and in any job state if available
2401 [Audio Encoder] fixed TimeStretch support for 23.976 <--> 25 fps conversion (regression of 2383)
2400 [MediaInfo] added log output if fps cannot be determined
2399 [x264] if --bluray-compat is used without a BluRay device selected:
            --open-gop is not forced anymore
            --weightp is restricted to 0 or 1
2398 [Queue] allowed to open output folder when job is done. This is available via the right click on the Job Queue.
2397 [MediaInfo] use 23.976 instead of 99 as default value if fps cannot be determined
2396 [AutoEncode] fixed mp4 output (regression of 2381)
2395 [x264] only download 10bit files if enabled
2394 [x264] added x264 10bit to the update server
2393 [Main] create external job muxer jobs with dependencies (regression of 2381)
2392 [x264] added 10 bit encoding support. This can be enabled through the MeGUI settings. Thanks to Detmek for the tests.
2391 [Aften] do not log progress messages
2390 [OneClick] improved AddBorders calculation for AviSynth 2.6
2389 [Main] updated the correct video output file extension according to the muxer used (regression of 2381)